[gd_scene load_steps=5 format=3 uid="uid://ch2hvaf1r6mu2"]

[ext_resource type="Theme" uid="uid://cs0qe7mlqm5a" path="res://assets/themes/dcb.tres" id="1_bkyw0"]
[ext_resource type="Script" uid="uid://bddvvqvoaw2up" path="res://scripts/radar/display_control_board.gd" id="1_f2yj5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkyw0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81eg6"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.332881, 0.332881, 0.332881, 1)

[node name="DisplayControlBoard" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bkyw0")
script = ExtResource("1_f2yj5")

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bkyw0")

[node name="PC" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1920, 90)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_bkyw0")
theme_override_styles/panel = SubResource("StyleBoxFlat_81eg6")

[node name="HBC" type="HBoxContainer" parent="PC"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Range" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "RANGE
40"
autowrap_mode = 2

[node name="CenterConf" type="VBoxContainer" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlaceCenter" type="Button" parent="PC/HBC/CenterConf"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "PLACE
CNTR"
autowrap_mode = 2

[node name="OffCenter" type="Button" parent="PC/HBC/CenterConf"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "OFF
CNTR"
autowrap_mode = 2

[node name="RangeRings" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "RR
5"
autowrap_mode = 2

[node name="RangeRingsConf" type="VBoxContainer" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="PlaceRangRings" type="Button" parent="PC/HBC/RangeRingsConf"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "PLACE
RR"
autowrap_mode = 2

[node name="RangeRingsCenter" type="Button" parent="PC/HBC/RangeRingsConf"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "RR
CNTR"
autowrap_mode = 2

[node name="Maps" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "MAPS"
autowrap_mode = 2

[node name="MapContainer" type="GridContainer" parent="PC/HBC"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="Map1" type="Button" parent="PC/HBC/MapContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "221
J_RNAV"
autowrap_mode = 2

[node name="Map2" type="Button" parent="PC/HBC/MapContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "851
COAST"
autowrap_mode = 2

[node name="Map3" type="Button" parent="PC/HBC/MapContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "849
CLASS_B"
autowrap_mode = 2

[node name="Map4" type="Button" parent="PC/HBC/MapContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "220
F_RNAV"
autowrap_mode = 2

[node name="Map5" type="Button" parent="PC/HBC/MapContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
autowrap_mode = 2

[node name="Map6" type="Button" parent="PC/HBC/MapContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "803
3NM_MVA"
autowrap_mode = 2

[node name="MapMenu" type="HBoxContainer" parent="PC/HBC"]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBC" type="VBoxContainer" parent="PC/HBC/MapMenu"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Done" type="Button" parent="PC/HBC/MapMenu/VBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DONE
"
autowrap_mode = 2

[node name="Clear" type="Button" parent="PC/HBC/MapMenu/VBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "CLR ALL"
autowrap_mode = 2

[node name="Maps" type="GridContainer" parent="PC/HBC/MapMenu"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 16

[node name="Map1" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map2" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map3" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map4" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map5" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map6" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map7" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map8" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map9" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map10" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map11" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map12" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map13" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map14" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map15" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map16" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map17" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map18" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map19" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map20" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map21" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map22" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map23" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map24" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map25" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map26" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map27" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map28" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map29" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map30" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map31" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="Map32" type="Button" parent="PC/HBC/MapMenu/Maps"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "200
JFK"
autowrap_mode = 2

[node name="VBC2" type="VBoxContainer" parent="PC/HBC/MapMenu"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Geo" type="Button" parent="PC/HBC/MapMenu/VBC2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "GEO
MAPS"
autowrap_mode = 2

[node name="Current" type="Button" parent="PC/HBC/MapMenu/VBC2"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "CURRENT"
autowrap_mode = 2

[node name="Weather" type="HBoxContainer" parent="PC/HBC"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Weather1" type="Button" parent="PC/HBC/Weather"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "WX1

"
autowrap_mode = 2

[node name="Weather2" type="Button" parent="PC/HBC/Weather"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "WX2

"
autowrap_mode = 2

[node name="Weather3" type="Button" parent="PC/HBC/Weather"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "WX3

"
autowrap_mode = 2

[node name="Weather4" type="Button" parent="PC/HBC/Weather"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "WX4

"
autowrap_mode = 2

[node name="Weather5" type="Button" parent="PC/HBC/Weather"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "WX5

"
autowrap_mode = 2

[node name="Weather6" type="Button" parent="PC/HBC/Weather"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "WX6

"
autowrap_mode = 2

[node name="Brite" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "BRITE"
autowrap_mode = 2

[node name="BriteMenu" type="HBoxContainer" parent="PC/HBC"]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="GC" type="GridContainer" parent="PC/HBC/BriteMenu"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 9

[node name="DCB" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB2" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB3" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB4" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB5" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB6" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB7" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB8" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB9" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB10" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB11" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB12" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB13" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB14" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB15" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB16" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="DCB17" type="Button" parent="PC/HBC/BriteMenu/GC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "DCB 100"
autowrap_mode = 2

[node name="Done" type="Button" parent="PC/HBC/BriteMenu"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "DONE"
autowrap_mode = 2

[node name="LeaderLine" type="VBoxContainer" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="LeaderLineDirection" type="Button" parent="PC/HBC/LeaderLine"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "LDR DIR
N"
autowrap_mode = 2

[node name="LeaderLineLength" type="Button" parent="PC/HBC/LeaderLine"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "LDR
2"
autowrap_mode = 2

[node name="CharSize" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "CHAR
SIZE"
autowrap_mode = 2

[node name="Mode" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "MODE
FSL"
autowrap_mode = 2

[node name="Pref" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "PREF"
autowrap_mode = 2

[node name="Site" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "SITE
FUSED"
autowrap_mode = 2

[node name="Filters" type="VBoxContainer" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="SSAFilters" type="Button" parent="PC/HBC/Filters"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "SSA
FILTERS"
autowrap_mode = 2

[node name="GITextFilters" type="Button" parent="PC/HBC/Filters"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 3
text = "GI TEXT
FILTER"
autowrap_mode = 2

[node name="Shift" type="Button" parent="PC/HBC"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "SHIFT"
autowrap_mode = 2

[connection signal="gui_input" from="PC/HBC/Range" to="." method="_on_range_gui_input"]
[connection signal="toggled" from="PC/HBC/Range" to="." method="_on_range_toggled"]
[connection signal="gui_input" from="PC/HBC/RangeRings" to="." method="_on_range_rings_gui_input"]
[connection signal="toggled" from="PC/HBC/RangeRings" to="." method="_on_range_rings_toggled"]
[connection signal="pressed" from="PC/HBC/Maps" to="." method="_on_maps_pressed"]
